--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "semi": false,
-  "singleQuote": true
+  "semi": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpaing": true,
+  "singleQuote": true,
+  "endOfLine": "lf",
+  "vueIndentScriptAndStyle": true
 }
