--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "rccg-flier-generator",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "test": "jest"
   },
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
+    "global": "^4.4.0",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
@@ -39,7 +40,7 @@
     "husky": "^4.3.0",
     "jest": "^26.5.0",
     "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.0",
     "vue-jest": "^3.0.4"
   }
 }
